--- a/htmlCrashCourse/index.html
+++ b/htmlCrashCourse/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Crash Course</title>
 </head>
+
 <body>
     <!-- Headings -->
     <h1>Heading One</h1>
@@ -13,5 +15,149 @@
     <h4>Heading Four</h4>
     <h5>Heading Five</h5>
     <h6>Heading Six</h6>
+
+    <!-- Paragraph -->
+    <p>
+        Lorem ipsum dolor sit, <strong>amet consectetur adipisicing elit</strong>. Ad delectus earum eveniet optio
+        corrupti possimus
+        officiis pariatur repudiandae rem. Corporis aspernatur quos consequuntur, laboriosam iste eum odit labore
+        quibusdam possimus.
+        Quae, qui? Asperiores error id, provident ex reiciendis nemo hic ad minima saepe animi architecto quam maxime
+        laboriosam blanditiis mollitia repudiandae unde ratione odit nostrum vero. Eius officia adipisci ducimus?
+        Temporibus esse vel iure dignissimos dolorem ab totam illum, voluptas blanditiis odit praesentium alias nobis
+        facere facilis, mollitia animi officia. Ut fugit cum molestiae voluptatibus, labore consectetur! Consequuntur,
+        veniam recusandae.
+        Dolorem culpa repudiandae ex. Sapiente, ea quas eligendi, odio error explicabo hic doloribus mollitia distinctio
+        voluptatem temporibus alias sed consectetur nobis molestias! Alias cumque dolore perferendis, perspiciatis saepe
+        modi eum?
+        <em>Quaerat officia sequi a voluptatem distinctio excepturi</em>, aliquam repudiandae dolorem vero, ex deserunt
+        corrupti
+        quasi quidem molestias rem esse beatae ea, exercitationem deleniti repellendus quos. Odio eos quo aut culpa.
+    </p>
+    <p>
+        Lorem ipsum dolor, <a href="#" target="_blank">sit amet consectetur adipisicing elit</a>. Quisquam nisi mollitia
+        iste modi, perspiciatis dolores
+        voluptatibus explicabo et accusamus, alias veniam consequatur molestias eius odit voluptate facilis vero totam?
+        Qui!
+        Magni, inventore pariatur voluptas ipsa iure, est illo, expedita magnam libero perferendis laborum? Sequi, quam
+        fugiat! Asperiores, assumenda laboriosam. In quas sint vitae laborum incidunt architecto harum. Optio, totam
+        consectetur!
+        Est officia nemo veritatis nisi optio culpa, mollitia corporis nesciunt blanditiis voluptatum quos distinctio
+        qui facere dolor unde assumenda odio natus, facilis delectus vero recusandae quaerat alias. Ipsum, quaerat illo.
+    </p>
+    <!-- Lists -->
+    <h4>Unordered Lists</h4>
+    <ul>
+        <li>List Item 1</li>
+        <li>List Item 2</li>
+        <li>List Item 3</li>
+        <li>List Item 4</li>
+    </ul>
+    <h4>Ordered Lists</h4>
+    <ol>
+        <li>List Item 1</li>
+        <li>List Item 2</li>
+        <li>List Item 3</li>
+        <li>List Item 4</li>
+    </ol>
+    <!-- Table -->
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Age</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Aubrey Lizardo</td>
+                <td>lizardoaubrey.software@gmail.com</td>
+                <td>24</td>
+            </tr>
+            <tr>
+                <td>Diana Gav</td>
+                <td>shizuku007@gmail.com</td>
+                <td>19</td>
+            </tr>
+            <tr>
+                <td>Aubrey Lizardo</td>
+                <td>lizardoaubrey.software@gmail.com</td>
+                <td>24</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <br>
+    <hr>
+    <br>
+
+    <!-- Forms -->
+    <form action="process.php" method="GET">
+        <div>
+            <label for="">First Name</label>
+            <input type="text" name="firstName" placeholder="Enter first name" autocomplete="off">
+        </div>
+        <br>
+        <div>
+            <label for="">Last Name</label>
+            <input type="text" name="lastName">
+        </div>
+        <br>
+        <div>
+            <label for="">Email</label>
+            <input type="email" name="email">
+        </div>
+        <br>
+        <div>
+            <label for="">Message</label>
+            <textarea name="message" id="" cols="30" rows="10"></textarea>
+        </div>
+        <br>
+        <div>
+            <label for="">Gender</label>
+            <select name="gender" id="">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="other">Other</option>
+            </select>
+        </div>
+        <br>
+        <div>
+            <label for="">Age</label>
+            <input type="number" name="age" value="18">
+        </div>
+        <br>
+        <div>
+            <label for="">Birthday</label>
+            <input type="date" name="birthday">
+        </div>
+        <br>
+        <input type="submit" name="submit" value="Submit">
+    </form>
+    <!-- Button -->
+    <button>Click Me</button>
+    <br>
+    <!-- Image -->
+    <a
+        href="https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcT7p48zgkqUyYDdx7AGnlWVOEh6vpc8QHHPh0mAtn_73_jD_etGCyAexD1ArARBsGl4HqZYyGjcpRJRo3A">
+        <img src="https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcT7p48zgkqUyYDdx7AGnlWVOEh6vpc8QHHPh0mAtn_73_jD_etGCyAexD1ArARBsGl4HqZYyGjcpRJRo3A"
+            alt="bird pic" width="250px">
+    </a>
+
+    <!-- Quotation -->
+    <blockquote cite="http://traversymedia.com">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus minus ut accusamus unde rerum at provident
+        quaerat repellat nisi hic architecto eveniet dignissimos optio enim sit doloribus nam, reiciendis consectetur.
+    </blockquote>
+    <p>
+        The <abbr title="World Wide Web">WWW is awesome</abbr>
+    </p>
+    <p>
+        <cite>HTML</cite> Crash Course
+    </p>
+    
+    <div style="margin-top:500px;"></div>
 </body>
+
 </html>
