--- a/htmlCrashCourse/index.html
+++ b/htmlCrashCourse/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <a href="blog.html">go to blog</a>
+    <hr>
     <!-- Headings -->
     <h1>Heading One</h1>
     <h2>Heading Two</h2>
