learn almost everything in css style, layout and positioning (float) excluding flexbox and grid

--- a/cssCrashCourse/index.html
+++ b/cssCrashCourse/index.html
@@ -13,36 +13,57 @@
         <div class="box-1">
             <h1>Hello World</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, necessitatibus repellendus recusandae quam
-                tempore mollitia dolorem voluptates a consequuntur culpa aliquam magni cum iste qui perspiciatis atque fuga? Ex,
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, necessitatibus repellendus recusandae
+                quam
+                tempore mollitia dolorem voluptates a consequuntur culpa aliquam magni cum iste qui perspiciatis atque
+                fuga? Ex,
                 deleniti.
-                Rerum, doloribus minima eligendi voluptatum ab vero? Laboriosam, similique dicta! Laboriosam odio vero tenetur
-                sint impedit quidem velit corrupti doloremque earum iste dolorem asperiores nulla, deleniti enim quisquam rerum
+                Rerum, doloribus minima eligendi voluptatum ab vero? Laboriosam, similique dicta! Laboriosam odio vero
+                tenetur
+                sint impedit quidem velit corrupti doloremque earum iste dolorem asperiores nulla, deleniti enim
+                quisquam rerum
                 iusto?
-                In voluptatem dolore ducimus earum at quod voluptas quidem qui sequi. Nihil iure voluptatem enim a recusandae.
-                Soluta, perferendis explicabo culpa omnis beatae, ut architecto magnam, neque suscipit delectus accusamus.
-                Dolore libero dolorum reprehenderit iusto aut, qui nobis illum sint maxime corporis unde labore maiores ullam
-                quasi nihil quaerat quidem rerum repellat veritatis animi asperiores est autem! Provident, minima veniam?
-                Eum quam neque consectetur ipsam, enim, harum voluptate perspiciatis illo quo suscipit possimus quibusdam optio.
-                Provident harum, dignissimos animi temporibus in fugiat sint quo consequatur modi pariatur, soluta quidem sunt?
+                In voluptatem dolore ducimus earum at quod voluptas quidem qui sequi. Nihil iure voluptatem enim a
+                recusandae.
+                Soluta, perferendis explicabo culpa omnis beatae, ut architecto magnam, neque suscipit delectus
+                accusamus.
+                Dolore libero dolorum reprehenderit iusto aut, qui nobis illum sint maxime corporis unde labore maiores
+                ullam
+                quasi nihil quaerat quidem rerum repellat veritatis animi asperiores est autem! Provident, minima
+                veniam?
+                Eum quam neque consectetur ipsam, enim, harum voluptate perspiciatis illo quo suscipit possimus
+                quibusdam optio.
+                Provident harum, dignissimos animi temporibus in fugiat sint quo consequatur modi pariatur, soluta
+                quidem sunt?
             </p>
         </div>
         <div class="box-2">
             <h1>Goodbye World</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, necessitatibus repellendus recusandae quam
-                tempore mollitia dolorem voluptates a consequuntur culpa aliquam magni cum iste qui perspiciatis atque fuga? Ex,
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, necessitatibus repellendus recusandae
+                quam
+                tempore mollitia dolorem voluptates a consequuntur culpa aliquam magni cum iste qui perspiciatis atque
+                fuga? Ex,
                 deleniti.
-                Rerum, doloribus minima eligendi voluptatum ab vero? Laboriosam, similique dicta! Laboriosam odio vero tenetur
-                sint impedit quidem velit corrupti doloremque earum iste dolorem asperiores nulla, deleniti enim quisquam rerum
+                Rerum, doloribus minima eligendi voluptatum ab vero? Laboriosam, similique dicta! Laboriosam odio vero
+                tenetur
+                sint impedit quidem velit corrupti doloremque earum iste dolorem asperiores nulla, deleniti enim
+                quisquam rerum
                 iusto?
-                In voluptatem dolore ducimus earum at quod voluptas quidem qui sequi. Nihil iure voluptatem enim a recusandae.
-                Soluta, perferendis explicabo culpa omnis beatae, ut architecto magnam, neque suscipit delectus accusamus.
-                Dolore libero dolorum reprehenderit iusto aut, qui nobis illum sint maxime corporis unde labore maiores ullam
-                quasi nihil quaerat quidem rerum repellat veritatis animi asperiores est autem! Provident, minima veniam?
-                Eum quam neque consectetur ipsam, enim, harum voluptate perspiciatis illo quo suscipit possimus quibusdam optio.
-                Provident harum, dignissimos animi temporibus in fugiat sint quo consequatur modi pariatur, soluta quidem sunt?
+                In voluptatem dolore ducimus earum at quod voluptas quidem qui sequi. Nihil iure voluptatem enim a
+                recusandae.
+                Soluta, perferendis explicabo culpa omnis beatae, ut architecto magnam, neque suscipit delectus
+                accusamus.
+                Dolore libero dolorum reprehenderit iusto aut, qui nobis illum sint maxime corporis unde labore maiores
+                ullam
+                quasi nihil quaerat quidem rerum repellat veritatis animi asperiores est autem! Provident, minima
+                veniam?
+                Eum quam neque consectetur ipsam, enim, harum voluptate perspiciatis illo quo suscipit possimus
+                quibusdam optio.
+                Provident harum, dignissimos animi temporibus in fugiat sint quo consequatur modi pariatur, soluta
+                quidem sunt?
             </p>
+            <a class="button" href="">Read More</a>
         </div>
         <div class="categories">
             <h2>Categories</h2>
@@ -54,23 +75,94 @@
                 <li><a href="#test">Category 5</a></li>
             </ul>
         </div>
-        <form action="">
+        <form action="#" class="my-form">
             <div class="form-group">
-                <label for="">Name:</label>
+                <label for="name">Name:</label>
                 <input type="text" name="name">
             </div>
             <div class="form-group">
-                <label for="">Email:</label>
+                <label for="email">Email:</label>
                 <input type="email" name="email">
             </div>
             <div class="form-group">
-                <label for="">Message:</label>
-                <textarea name="message" id=""></textarea>
+                <label for="message">Message:</label>
+                <textarea name="message" id="message"></textarea>
             </div>
             <input type="submit" class="button" value="Submit">
         </form>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis vitae, quia maiores deleniti
+                recusandae animi repellat amet veniam sunt illo, labore tenetur in beatae modi similique rerum rem
+                officiis nihil?
+                Debitis ullam non reiciendis temporibus, odit, dolore natus exercitationem accusantium ut quis quae
+                provident architecto amet, officia officiis odio sequi delectus nobis numquam. Ipsa, sed molestiae!
+                Voluptatum numquam hic nesciunt.
+                Exercitationem blanditiis, explicabo dolor odit deleniti ab, dolore saepe incidunt quibusdam aspernatur
+                ea tempora sit eligendi. Similique soluta maiores cupiditate quaerat in doloremque? Numquam aspernatur,
+                doloremque libero officiis totam soluta!
+            </p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis vitae, quia maiores deleniti
+                recusandae animi repellat amet veniam sunt illo, labore tenetur in beatae modi similique rerum rem
+                officiis nihil?
+                Debitis ullam non reiciendis temporibus, odit, dolore natus exercitationem accusantium ut quis quae
+                provident architecto amet, officia officiis odio sequi delectus nobis numquam. Ipsa, sed molestiae!
+                Voluptatum numquam hic nesciunt.
+                Exercitationem blanditiis, explicabo dolor odit deleniti ab, dolore saepe incidunt quibusdam aspernatur
+                ea tempora sit eligendi. Similique soluta maiores cupiditate quaerat in doloremque? Numquam aspernatur,
+                doloremque libero officiis totam soluta!
+            </p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis vitae, quia maiores deleniti
+                recusandae animi repellat amet veniam sunt illo, labore tenetur in beatae modi similique rerum rem
+                officiis nihil?
+                Debitis ullam non reiciendis temporibus, odit, dolore natus exercitationem accusantium ut quis quae
+                provident architecto amet, officia officiis odio sequi delectus nobis numquam. Ipsa, sed molestiae!
+                Voluptatum numquam hic nesciunt.
+                Exercitationem blanditiis, explicabo dolor odit deleniti ab, dolore saepe incidunt quibusdam aspernatur
+                ea tempora sit eligendi. Similique soluta maiores cupiditate quaerat in doloremque? Numquam aspernatur,
+                doloremque libero officiis totam soluta!
+            </p>
+        </div>
+        <div class="clr"></div>
+        <div id="main-block">
+            <h3>Heading</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet explicabo libero sint magnam commodi
+                optio praesentium itaque molestias cum doloribus, possimus nostrum voluptates qui dignissimos voluptatem
+                eum temporibus ex voluptate.
+            </p>
+        </div>
+        <div id="sidebar">
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam tempore, enim dolor a illo ullam, et
+            </p>
+        </div>
+        <div class="clr"></div>
+        <div class="p-box">
+            <h1>Hello</h1>
+            <h2>Goodbye</h2>
+        </div>
+        <ul class="my-list">
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+        </ul>
     </div><!--container ends-->
-    <div style="margin-top:500px"></div>
+    <a href="" class="fix-me button">Hello</a>
+    <div style="margin-top:6000px"></div>
 </body>
 
 </html>
