--- a/chromeDevTools/index.html
+++ b/chromeDevTools/index.html
@@ -6,9 +6,67 @@
     <title>Google Chrome Developer Tools</title>
 </head>
 <body>
-    
+    <h1>Devtools Sandox</h1>
+    <button>Get user</button>
     <script>
-        
+        // console.log('Hello');
+        // giviing error
+        // console.log(myvar);
+        // console.error("This is an error");
+        // console.warn("This is an warning");
+        // console.dir(document);
+        // console.log(document.URL);
+        // console.table([{name:'John', email:"test@test.com", age:33}]);
+        // console.clear();
+        // console.group("say hello");
+        // console.log("hello john")
+        // console.log("hello sally")
+        // console.log("hello chris")
+        // console.groupEnd("Say Hello");
+
+        // console.time("for loop");
+        //     for(var i = 0; i < 20000; i++){
+        //         console.log(i);
+        //     }
+        // console.timeEnd("for loop");
+
+        // function greaterThan(x, y){
+        //     console.assert(x > y, {"message": "x is not greater than y", "x": x, "y":y});
+        // }
+        // greaterThan(2,5);
+        // document.querySelector("button").addEventListener("click", getUsers);
+        // function getUsers(){
+        //     var xhr = new XMLHttpRequest();
+        //     xhr.open('GET', 'https://api.github.com/users', true);
+
+        //     xhr.onload = function(){
+        //         if(this.status == 200){
+        //             console.log("Users returned");
+        //             // var users = JSON.parse(this.respnseText);
+
+        //             // var output = '';
+        //             // for(var i in users){
+        //             //     output +=
+        //             //         '<div class="user">' +
+        //             //         '<img src="'+users[i].avatar_url+'"width="70" height="70">' +
+        //             //         '<ul>'+
+        //             //         '<li>ID: '+users[i].id+'</li>' +
+        //             //         '<li>Login: ' +users[i].login+'</li>' +
+        //             //         '</ul>'+
+        //             //         '</div>';
+        //             // }
+        //             // document.getElementById("users").innerHTML = output;
+        //         }
+        //     }
+        //     xhr.send();
+        // }
+        localStorage.setItem("name", "john");
+        // console.log(localStorage.getItem("name"));
+        // localStorage.clear("name");
+        sessionStorage.setItem('car', 'BMW');
+        // sessionStorage.clear();
+
+        document.cookie = "username=John Doe";  
     </script>
 </body>
 </html>
