--- a/fetchAPI/index.html
+++ b/fetchAPI/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fetch API</title>
+    <title>Fetch API Sandbox</title>
 </head>
+
 <body>
-    
+    <button id="getText">Get Text</button>
+    <div id="output"></div>
+    <script src="main.js"></script>
 </body>
+
 </html>
