--- a/fetchAPI/index.html
+++ b/fetchAPI/index.html
@@ -9,8 +9,9 @@
 
 <body>
     <button id="getText">Get Text</button>
+    <button id="getUsers"></button>
     <div id="output"></div>
-    <script src="main.js"></script>
+    <script src="getText.js"></script>
 </body>
 
 </html>
