adding script getUsers.js and its file

--- a/fetchAPI/index.html
+++ b/fetchAPI/index.html
@@ -12,6 +12,7 @@
     <button id="getUsers"></button>
     <div id="output"></div>
     <script src="getText.js"></script>
+    <script src="getUsers.js"></script>
 </body>
 
 </html>
