--- a/fetchAPI/index.html
+++ b/fetchAPI/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <button id="getText">Get Text</button>
-    <button id="getUsers"></button>
+    <button id="getUsers">Get Users</button>
     <div id="output"></div>
     <script src="getText.js"></script>
     <script src="getUsers.js"></script>
