--- a/fetchAPI/index.html
+++ b/fetchAPI/index.html
@@ -9,10 +9,22 @@
 
 <body>
     <button id="getText">Get Text</button>
-    <button id="getUsers">Get Users</button>
+    <button id="getUsers">Get JSON</button>
+    <button id="getPost">Get API DATA</button>
+    <hr>
     <div id="output"></div>
+    <form action=""id="addPost">
+        <div>
+            <input id='title' placeholder="Title" type="text">
+        </div>
+        <div>
+            <textarea name="" id="body" cols="30" rows="10" placeholder="Body"></textarea>
+        </div>
+        <input type="submit" value="Submit">
+    </form>
     <script src="getText.js"></script>
     <script src="getUsers.js"></script>
+    <script src="getPost.js"></script>
 </body>
 
 </html>
