learning addPost.js, using form method='post' and fetch, json.stringify

--- a/fetchAPI/index.html
+++ b/fetchAPI/index.html
@@ -13,7 +13,7 @@
     <button id="getPost">Get API DATA</button>
     <hr>
     <div id="output"></div>
-    <form action=""id="addPost">
+    <form action="" id="addPost">
         <div>
             <input id='title' placeholder="Title" type="text">
         </div>
@@ -25,6 +25,7 @@
     <script src="getText.js"></script>
     <script src="getUsers.js"></script>
     <script src="getPost.js"></script>
+    <script src="addPost.js"></script>
 </body>
 
 </html>
