--- a/flexCrashCourse/index.html
+++ b/flexCrashCourse/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex Crash Course</title>
+    <title>Flex Crash Course 2022</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <div class="flex-container">
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+    </div>
 </body>
-
 </html>
