--- a/flexCrashCourse/index.html
+++ b/flexCrashCourse/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Crash Course 2022</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        h2{
+            margin:8px;
+            text-align: center;
+        }
+        a{
+            text-decoration: none;
+        }
+        a:hover{
+            text-decoration: underline;
+            color:rgb(39, 37, 37);
+        }
+    </style>
 </head>
 
 <body>
@@ -14,5 +27,6 @@
         <div class="item">Item 2</div>
         <div class="item">Item 3</div>
     </div>
+    <h2><a href="flexbox-layout-project.html">Flexbox Layout Project</a></h2>
 </body>
 </html>
