--- a/flexCrashCourse/index.html
+++ b/flexCrashCourse/index.html
@@ -27,6 +27,6 @@
         <div class="item">Item 2</div>
         <div class="item">Item 3</div>
     </div>
-    <h2><a href="flexbox-layout-project.html">Flexbox Layout Project</a></h2>
+    <h2><a href="project/flexbox-layout-project.html">Flexbox Layout Project</a></h2>
 </body>
 </html>
