educated about grid style & diff. properties of it including how to create responsive website

--- a/gridCrashCourse/grid.html
+++ b/gridCrashCourse/grid.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Crash Course</title>
-    <link rel="stylesheet" href="style.css">
+    <title>CSS Grid Crash Course</title>
+    <link rel="stylesheet" href="grid.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="item">
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. A recusandae reprehenderit mollitia
+            eaque voluptatum repellendus accusamus voluptatibus numquam suscipit porro, molestias ratione asperiores ex
+            adipisci atque qui modi voluptas optio. -->
+            Item 1
+        </div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+        <div class="item">Item 4</div>
+        <div class="item">Item 5</div>
+        <div class="item">Item 6</div>
+        <div class="item">Item 7</div>
+        <div class="item">Item 8</div>
+        <div class="item">Item 9</div>
+    </div>
 </body>
+
 </html>
