creating first before watching how travs desig it

--- a/gridCrashCourse/grid2.html
+++ b/gridCrashCourse/grid2.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="grid2.css">
-    <title>Grid Crash Course</title>
+    <title>Grid2 Crash Course</title>
 </head>
 <body>
     
+    <!-- My CREATION -->
+    <!-- <div class="container">
+        <header>Header</header>
+        <nav>Navigation</nav>
+        <main>Content</main>
+        <aside>Sidebar</aside>
+        <footer>Footer</footer>
+    </div> -->
 </body>
 </html>
