learned about grid-template-areas & grid-area

--- a/gridCrashCourse/grid2.html
+++ b/gridCrashCourse/grid2.html
@@ -7,7 +7,11 @@
     <title>Grid2 Crash Course</title>
 </head>
 <body>
-    
+    <header>Header</header>
+    <main>Content</main>
+    <nav>Navigation</nav>
+    <aside>Sidebar</aside>
+    <footer>Footer</footer>
     <!-- My CREATION -->
     <!-- <div class="container">
         <header>Header</header>
