fixing the class card--bg-purple and finishing first part of css styling

--- a/gridCrashCourse/project/index.html
+++ b/gridCrashCourse/project/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="testimonials">
-        <div class="card card--bg--purple">
+        <div class="card card--bg-purple">
             <header class="card__header">
                 <img src="images/image-daniel.jpg" class="card__img" alt="">
                 <div>
