modified link in index.html,learned to add extension sass in vscode, also how to add using cmd ( check in style.scss how to ) and watching sass

--- a/sassCrashCourse/index.html
+++ b/sassCrashCourse/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="scss/style.css">
     <script src="main.js"></script>
     <title>Sass Crash Course</title>
 </head>
+
 <body>
     <header class="showcase">
         <div class="container">
@@ -30,11 +32,10 @@
                     <a href="#" class="btn-primary">Learn More</a>
                     <a href="#" class="btn-secondary">Sign Up</a>
                 </div>
-                <img
-                    src="img/work.png"
-                />
+                <img src="img/work.png" />
             </div>
         </div>
     </header>
 </body>
+
 </html>
