--- a/2022-tailwindCrashCourse/src/index.html
+++ b/2022-tailwindCrashCourse/src/index.html
@@ -8,5 +8,26 @@
   <title>Manage Landing Page</title>
 </head>
 <body>
-
+    <!-- nav -->
+    <nav class="relative container mx-auto p-6">
+        <!-- flex -->
+        <div class="flex items-center justify-between">
+            <!-- logo -->
+            <div class="pt-2">
+                <img src="../img/logo.svg" alt="">
+            </div>
+            <!-- menu -->
+            <div class="hidden md:flex space-x-6">
+                <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
+                <a href="#" class="hover:text-darkGrayishBlue">Product</a>
+                <a href="#" class="hover:text-darkGrayishBlue">About</a>
+                <a href="#" class="hover:text-darkGrayishBlue">Career</a>
+                <a href="#" class="hover:text-darkGrayishBlue">Contact</a>
+            </div>
+            <!-- button -->
+            <a href="#" class="hidden md:block p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">
+                Get Started
+            </a>
+        </div>
+    </nav>
 </html>
