--- a/2022-tailwindCrashCourse/src/index.html
+++ b/2022-tailwindCrashCourse/src/index.html
@@ -1,51 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
-  <link rel="stylesheet" href="../dist/output.css">
-  <title>Manage Landing Page</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/dist/output.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../dist/output.css" />
+    <title>Manage Landing Page</title>
+  </head>
+  <body>
     <!-- nav -->
     <nav class="relative container mx-auto p-6">
-        <!-- flex -->
-        <div class="flex items-center justify-between">
-            <!-- logo -->
-            <div class="pt-2">
-                <img src="../img/logo.svg" alt="">
-            </div>
-            <!-- menu -->
-            <div class="hidden md:flex space-x-6">
-                <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
-                <a href="#" class="hover:text-darkGrayishBlue">Product</a>
-                <a href="#" class="hover:text-darkGrayishBlue">About</a>
-                <a href="#" class="hover:text-darkGrayishBlue">Career</a>
-                <a href="#" class="hover:text-darkGrayishBlue">Contact</a>
-            </div>
-            <!-- button -->
-            <a href="#" class="hidden md:block p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">
-                Get Started
-            </a>
+      <!-- flex -->
+      <div class="flex items-center justify-between">
+        <!-- logo -->
+        <div class="pt-2">
+          <img src="../img/logo.svg" alt="" />
         </div>
+        <!-- menu -->
+        <div class="hidden md:flex space-x-6">
+          <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Product</a>
+          <a href="#" class="hover:text-darkGrayishBlue">About</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Career</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Contact</a>
+        </div>
+        <!-- button -->
+        <a
+          href="#"
+          class="hidden md:block p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
+        >
+          Get Started
+        </a>
+      </div>
     </nav>
     <!-- hero -->
     <section id="hero">
-        <div class="container flex flex-col-reverse md:flex-row items-center px-6 mx-auto mth-10 space-y-0 md:space-y-0">
-            <!-- left -->
-            <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
-                <h1 class="max-w-md text-4xl font-bold text-center md:text-5xl md:text-left">
-                    Bring everyone together to build better products
-                </h1>
-                <p class="max-w-sm text-center text-darkGrayishBlue text-left">
-                    Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.
-                </p>
-            </div>
-            <!-- img -->
-            <div>
-
-            </div>
+      <div
+        class="container flex flex-col-reverse md:flex-row items-center px-6 mx-auto mth-10 space-y-0 md:space-y-0"
+      >
+        <!-- left -->
+        <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
+          <h1
+            class="max-w-md text-4xl font-bold text-center md:text-5xl md:text-left"
+          >
+            Bring everyone together to build better products
+          </h1>
+          <p class="max-w-sm text-center text-darkGrayishBlue text-left">
+            Manage makes it simple for software teams to plan day-to-day tasks
+            while keeping the larger team goals in view.
+          </p>
+          <div class="flex justify-center md:justify-start">
+            <!-- button -->
+            <a
+              href="#"
+              class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
+            >
+              Get Started
+            </a>
+          </div>
         </div>
+        <!-- img -->
+        <div class="md:w-1/2">
+          <img src="../img/illustration-intro.svg" alt="" />
+        </div>
+      </div>
     </section>
+   
+  </body>
 </html>
