--- a/2022-tailwindCrashCourse/src/index.html
+++ b/2022-tailwindCrashCourse/src/index.html
@@ -73,11 +73,11 @@
       >
         <!-- what's different -->
         <div class="flex flex-col space-y-12 md:w-1/2">
-          <h2 class="max-w-md tex-4xl font-bold text-center md:text-left">
+          <h2 class="max-w-md text-4xl font-bold text-center md:text-left">
             What's different about Manage?
           </h2>
           <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
-            Manage provides all the functionality your team needs, withouth the
+            Manage provides all the functionality your team needs, without the
             complexity. Our software is tailor-made for modern digital product
             teams.
           </p>
@@ -126,19 +126,18 @@
                   02
                 </div>
                 <h3 class="text-base font-bold md:mb-4 md:hidden">
-                  Track Company-wide progress
+                  Advanced built-in reports
                 </h3>
               </div>
             </div>
             <div>
               <h3 class="hidden mb-4 text-lg font-bold md:block">
-                Track Company-wide progress
+                Advanced built-in reports
               </h3>
               <p class="text-darkGrayishBlue">
-                See how your day-today tasks fit into the wider vision. Go from
-                tracking progress at the milestone level all the way done to the
-                smalles of details. Never lose sight of the bigger picture
-                again.
+                Set internal delivery estimates and track progress toward
+                company goals. Our customisable dashboard helps you build out
+                the reports you need to keep key stakeholders informed.
               </p>
             </div>
           </div>
@@ -155,22 +154,79 @@
                   03
                 </div>
                 <h3 class="text-base font-bold md:mb-4 md:hidden">
-                  Track Company-wide progress
+                  Everything you need in one place
                 </h3>
               </div>
             </div>
             <div>
               <h3 class="hidden mb-4 text-lg font-bold md:block">
-                Track Company-wide progress
+                Everything you need in one place
               </h3>
               <p class="text-darkGrayishBlue">
-                See how your day-today tasks fit into the wider vision. Go from
-                tracking progress at the milestone level all the way done to the
-                smalles of details. Never lose sight of the bigger picture
-                again.
+                Stop jumping from one service to another to communicate, store
+                files, track tasks and share documents. Manage offers an
+                all-in-one team productivity solution.
               </p>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <!-- testimonials -->
+    <section id="testimonials">
+      <!-- container to heading and testm blocks -->
+      <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
+        <!-- heading -->
+        <h2 class="text-4xl font-bold text-center">
+          What's Different About Manage?
+        </h2>
+        <!-- testimonials container -->
+        <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+          <!-- testimonial 1 -->
+          <div
+            class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
+          >
+            <img src="../img/avatar-anisha.png" class="w-16 -mt-14" alt="" />
+            <h5 class="text-lg font-bold">Anisha Li</h5>
+            <p class="text-sm text-darkGrayishBlue">
+              "Manage has supercharged our team's workflow. The ability to
+              maintain visibility on larger milestones at all times keeps
+              everyone motivated."
+            </p>
+          </div>
+          <!-- testimonial 2 -->
+          <div
+            class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3"
+          >
+            <img src="../img/avatar-ali.png" class="w-16 -mt-14" alt="" />
+            <h5 class="text-lg font-bold">Ali Bravo</h5>
+            <p class="text-sm text-darkGrayishBlue">
+              “We have been able to cancel so many other subscriptions since
+              using Manage. There is no more cross-channel confusion and
+              everyone is much more focused.”
+            </p>
+          </div>
+          <!-- testimonial 3 -->
+          <div
+            class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3"
+          >
+            <img src="../img/avatar-richard.png" class="w-16 -mt-14" alt="" />
+            <h5 class="text-lg font-bold">Richard Watts</h5>
+            <p class="text-sm text-darkGrayishBlue">
+              “Manage has supercharged our team’s workflow. The ability to
+              maintain visibility on larger milestones at all times keeps
+              everyone motivated.”
+            </p>
+          </div>
+        </div>
+        <!-- button -->
+        <div class="my-16">
+          <a
+          href="#"
+          class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
+        >
+          Get Started
+        </a>
         </div>
       </div>
     </section>
