--- a/2022-tailwindCrashCourse/src/index.html
+++ b/2022-tailwindCrashCourse/src/index.html
@@ -222,32 +222,106 @@
         <!-- button -->
         <div class="my-16">
           <a
-          href="#"
-          class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
-        >
-          Get Started
-        </a>
+            href="#"
+            class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
+          >
+            Get Started
+          </a>
         </div>
       </div>
     </section>
     <!-- CTA -->
     <section id="cta" class="bg-brightRed">
       <!-- flex container -->
-      <div class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:py-12 md:flex-row md:space-y-0">
+      <div
+        class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:py-12 md:flex-row md:space-y-0"
+      >
         <!-- heading -->
-        <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">
+        <h2
+          class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left"
+        >
           Simplify how your team works today
         </h2>
         <!--  button -->
         <div class="my-16">
           <a
-          href="#"
-          class="p-3 px-6 pt-2 text-brightRed bg-white rounded-full baseline shadow-2xl hover:bg-gray-900"
-        >
-          Get Started
-        </a>
+            href="#"
+            class="p-3 px-6 pt-2 text-brightRed bg-white rounded-full baseline shadow-2xl hover:bg-gray-900"
+          >
+            Get Started
+          </a>
         </div>
       </div>
     </section>
+    <!-- footer -->
+    <footer class="bg-veryDarkBlue">
+      <div
+        class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0"
+      >
+        <!-- logo and social links -->
+        <div
+          class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start"
+        >
+          <div class="mx-auto my-6 text-center text-white md:hidden">
+            Copyright &copy; 2022, All rights reserved
+          </div>
+          <!-- logo -->
+          <div>
+            <img src="../img/logo-white.svg" class="h-8" alt="" />
+          </div>
+          <!-- social links -->
+          <div class="flex justify-center space-x-4">
+            <!-- link 1 -->
+            <a href="#">
+              <img src="../img/icon-facebook.svg" class="h-8" alt="" />
+            </a>
+            <!-- link 2 -->
+            <a href="#">
+              <img src="../img/icon-youtube.svg" class="h-8" alt="" />
+            </a>
+            <!-- link 3 -->
+            <a href="#">
+              <img src="../img/icon-twitter.svg" class="h-8" alt="" />
+            </a>
+            <!-- link 1 -->
+            <a href="#">
+              <img src="../img/icon-pinterest.svg" class="h-8" alt="" />
+            </a>
+            <!-- link 1 -->
+            <a href="#">
+              <img src="../img/icon-facebook.svg" class="h-8" alt="" />
+            </a>
+          </div>
+        </div>
+        <!-- list -->
+        <div class="flex justify-around space-x-32">
+          <div class="flex flex-col space-y-3 text-white">
+            <a href="#" class="hover:text-brightRed">Home</a>
+            <a href="#" class="hover:text-brightRed">Pricing</a>
+            <a href="#" class="hover:text-brightRed">Products</a>
+            <a href="#" class="hover:text-brightRed">About</a>
+          </div>
+          <div class="flex flex-col space-y-3 text-white">
+            <a href="#" class="hover:text-brightRed">Careers</a>
+            <a href="#" class="hover:text-brightRed">Community</a>
+            <a href="#" class="hover:text-brightRed">Privacy Policy</a>
+          </div>
+        </div>
+        <!-- input -->
+        <div class="flex flex-col justify-between">
+          <form action="">
+            <div class="flex space-x-3">
+              <input type="text" class="flex-1 px-4 rounded-full focus:outline-none" placeholder="Updated in your inbox">
+              <button class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg-brightRedLight focus:outline-none">
+                Go
+              </button>
+            </div>
+          </form>
+          <div class="hidden text-white md:block">
+            Copyright &copy; 2022, All rights reserved
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
