--- a/2022-tailwindCrashCourse/src/index.html
+++ b/2022-tailwindCrashCourse/src/index.html
@@ -40,8 +40,8 @@
         </button>
       </div>
       <!-- mobile menu -->
-      <div class="md:hidden">
-        <div id="menu" class="absolute flex flex-col items-center self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
+      <div class="md:hidden ">
+        <div id="menu" class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md ">
           <a href="#">Pricing</a>
           <a href="#">Product</a>
           <a href="#">About Us</a>
