--- a/BroCode/JavaScript/index.html
+++ b/BroCode/JavaScript/index.html
@@ -7,7 +7,7 @@
   <title>JavaScript Full Course</title>
 </head>
 <body>
-  
-  <script src="main.js"></script>
+
+  <script src="index.js"></script>
 </body>
 </html>
