--- a/BroCode/JavaScript/index.html
+++ b/BroCode/JavaScript/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>JavaScript Full Course</title>
-</head>
-<body>
-
-  <script src="index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>JavaScript Full Course</title>
+  </head>
+  <body>
+    <!-- <h1>Hello</h1>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
+      nesciunt dolorum recusandae tempora delectus, consectetur ipsum aspernatur
+      saepe, deleniti distinctio, autem ab. Incidunt itaque deserunt fugiat
+      distinctio quam aut molestiae.
+    </p> -->
+    <!-- <h1 id="myh1"></h1>
+    <p id="myp"></p> -->
+    <script src="index.js"></script>
+  </body>
 </html>
