--- a/BroCode/JavaScript/index.html
+++ b/BroCode/JavaScript/index.html
@@ -20,6 +20,14 @@
     <p id="p1"></p>
     <p id="p2"></p>
     <p id="p3"></p> -->
+
+
+    <!-- <h1 id="myH1">Welcome</h1>
+    
+    <label for="">username: </label>
+    <input type="text" id="myText"><br><br>
+    <button id="mySubmit">Submit</button> -->
+
     <script src="index.js"></script>
   </body>
 </html>
