learn about constants

--- a/BroCode/JavaScript/index.html
+++ b/BroCode/JavaScript/index.html
@@ -28,6 +28,11 @@
     <input type="text" id="myText"><br><br>
     <button id="mySubmit">Submit</button> -->
 
+    <!-- <h3 id="myh3">Enter the radius of a circle: </h3>
+    <label for="">radius:</label>
+    <input type="text" id="myText"><br><br>
+    <button id="mySubmit">submit</button> -->
+
     <script src="index.js"></script>
   </body>
 </html>
